--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>Type_D ESP32 Web Flasher</title>
+    <title>Type D ESP32 Web Flasher</title>
     <script type="module" src="https://unpkg.com/esp-web-tools@9.0.3/dist/web/install-button.js?module"></script>
     <style>
       body { font-family: sans-serif; text-align: center; margin-top: 4em; }
