--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     </style>
   </head>
   <body>
-    <h1>Type_D ESP32 Web Flasher</h1>
+    <h1>Type D ESP32 Web Flasher</h1>
     <esp-web-install-button
       manifest="firmware/manifest.json">
     </esp-web-install-button>
